with MLP rewritten and main work flow unfinished

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,9 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+#temp file use to debug test
+tmp.ipynb
+
+#python demo files
+*demo.py
